--- a/src/components/Grandpa/Grandpa.css
+++ b/src/components/Grandpa/Grandpa.css
@@ -1,5 +1,8 @@
 .grandpa {
     border: 1px solid black;
+    margin: 10px;
+    padding: 5px;
+    display: flex;
 }
 
 .kids h1 {
@@ -8,4 +11,7 @@
 
 .kidsOfF {
     border: 1px solid red;
+    display: flex;
+    margin: 10px;
+    padding: 5px;
 }
